Fix some errors

--- a/main.tex
+++ b/main.tex
@@ -7103,8 +7103,8 @@ Aus \ref{bem:erw_endl_koerper} ergibt sich insbesondere, dass $\FF_{p^r}$ für $
 
 
 \begin{satz}\label{satz:galoisgr_endl_kp}
-Sei $\FF|\FF_p$ eine endliche Körpererweiterung vom Grad $n$.  
-Dann ist $\Gal(\FF|\FF_p)$ eine zyklische Gruppe der Ordnung $n$, erzeugt vom \defn{relativen Frobenius-Automorphismus}
+Sei $\FF|\FF_{p^r}$ eine endliche Körpererweiterung vom Grad $n$.  
+Dann ist $\Gal(\FF|\FF_{p^r})$ eine zyklische Gruppe der Ordnung $n$, erzeugt vom \defn{relativen Frobenius-Automorphismus}
 \[
 \Frob_\FF^r \colon \FF \to \FF, \quad \alpha \mapsto \alpha^{p^r}.
 \]
@@ -7318,7 +7318,7 @@ Sei $n \in \NN$ mit $\charact(K) \nmid n$. Dann gilt:
     \[
     \chi \colon \Gal(K(\mu_n) | K) \to \Aut(\mu_n) \cong (\ZZ / n \ZZ)^\times,
     \]
-    sodass für jede $n$-te Einheitswurzel $\zeta \in K(\mu_n)$ und jedes $\sigma \in \Gal(K(\mu_n)| K)$ gilt:
+    sodass für jede $n$-te Einheitswurzel $\zeta\in\mu_n$ und jedes $\sigma \in \Gal(K(\mu_n)| K)$ gilt:
     \[
     \sigma(\zeta) = \zeta^{\chi(\sigma)}.
     \]
